--- a/index.html
+++ b/index.html
@@ -306,9 +306,11 @@
                                     </div>
                                     <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I was the frontend developer on the FrontDesk Management System project. I used React.js to create a user-friendly dashboard for tracking office information, which was received and displayed from the backend through an API. The backend was programmed using PHP, and the system also had a fully functioning authentication system with log-in, recover password and log-out functionality.</p>
                                     <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
+                                    <a href="/template.html">
                                     <div class="portfolio_btn">
-                                        <a href="/template.html">View project</a>
+                                       View project
                                     </div>
+                                    </a>
                                 </div>
                                 <div class="col-md-5">
                                     <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
@@ -334,9 +336,11 @@
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                        <a>
                                         <div class="portfolio_btn">
-                                            <a class="smooth_scroll">View project</a>
+                                            View project
                                         </div>
+                                        </a>
                                     </div>
                                     <div class="col-md-5">
                                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
@@ -360,9 +364,11 @@
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"> I have a deep understanding of blockchain technology, DeFi, and the cryptocurrency market, and I use my expertise to create high-quality whitepapers and litepapers, along with visually appealing infographics and graphics that complement my written work. <br/> Additionally, I have experience in tokenomics and can provide insights into the design and implementation of effective token models for projects.</p>
+                                        <a href="/whitepapers.html">
                                         <div class="portfolio_btn">
-                                            <a href="/whitepapers.html" target="_blank">View projects</a>
+                                            View projects
                                         </div>
+                                        </a>
                                     </div>
                                     <div class="col-md-5">
                                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
