--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                     </div>
                                     <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I was the frontend developer on the FrontDesk Management System project. I used React.js to create a user-friendly dashboard for tracking office information, which was received and displayed from the backend through an API. The backend was programmed using PHP, and the system also had a fully functioning authentication system with log-in, recover password and log-out functionality.</p>
                                     <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
-                                    <a href="/template.html">
+                                    <a href="/frontdesk.html">
                                     <div class="portfolio_btn">
                                        View project
                                     </div>
@@ -336,7 +336,7 @@
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                        <a>
+                                        <a href="/chronicles.html">
                                         <div class="portfolio_btn">
                                             View project
                                         </div>
@@ -344,7 +344,7 @@
                                     </div>
                                     <div class="col-md-5">
                                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                                            <img src="assets/images/me.jpg" alt="">
+                                            <img src="assets/images/Chronicles2.png" alt="">
                                         </div>
                                     </div>
                                 </div>
