--- a/chronicles.html
+++ b/chronicles.html
@@ -154,23 +154,32 @@
                 <div class="row">
                     <div class="col-md-6 port-text">
                         <div>  
-                            <h6 style="color:#d35ca5">Blockchain Development</h6>
+                            <h6 style="color:#507ec8">Blockchain Development</h6>
                         </div>
                         <div>
                             <h1 style="color:black">Chronicles NFT</h1>
                         </div>
             
-                        <p>Here are some whitepaper samples I have done for various projects. You can reach out to me for more info.2labore in commodo dolor dolor officia consequat magna cillum aliquip anim officia ut occaecat officia ad. ad aute sunt sunt do id Excepteur eiusmod tempor esse velit deserunt cillum veniam magna et magna non. qui reprehenderit non dolor incididunt anim reprehenderit est velit laborum dolor dolor ipsum ullamco non nulla. nulla pariatur officia ea pariatur dolore veniam enim nulla sint commodo mollit pariatur reprehenderit commodo reprehenderit. </p>
-                    </div>
+                        <p>Chronicles is a project that required a website to mint NFTs. The website was built with the purpose of allowing whitelisted addresses to mint one NFT per wallet. The smart contract used for this project was created using Solidity, while the front-end development was done using ReactJS.</p>
+                          <p>  This website is designed to be user-friendly and easy to navigate, making the process of minting an NFT a seamless experience. </p>
+                        <div class="portfolio_btn">
+                            <a href="https://github.com/SeunScape/NFT-Minting-Site">
+                                <div class="text-center">Github <i class="fa-brands fa-github"></i></div>
+                            </a>
+                        </div>
+                        </div>
+                    
                 </div>
 
                 <div class="row padding-top-90">
-                    <div class="col-md-7 contain">
+                    <div class="col-md-12 contain">
                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                             <img src="./assets/images/chronicles.png"/>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                </div>
+                <div class="row padding-top-90">
+                    <div class="col-md-12 contain">
                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                             <img src="./assets/images/Chronicles3.png"/>
                         </div>
