--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                             </ul>
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
-                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">This is a website for minting NFTs for a project called Chronicles. The site allows whitelisted addresses to mint one NFT per wallet. The smart contract was written in Solidity and the front-end was developed using ReactJS.</p>
                                         <a href="/chronicles.html">
                                         <div class="portfolio_btn">
                                             View project
@@ -363,7 +363,7 @@
                                             </ul>
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
-                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"> I have a deep understanding of blockchain technology, DeFi, and the cryptocurrency market, and I use my expertise to create high-quality whitepapers and litepapers, along with visually appealing infographics and graphics that complement my written work. <br/> Additionally, I have experience in tokenomics and can provide insights into the design and implementation of effective token models for projects.</p>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"> With deep understanding of blockchain technology, DeFi, and the cryptocurrency market, I create high-quality whitepapers and litepapers, along with visually appealing infographics and graphics that complement my written work. <br/> Additionally, I have experience in tokenomics and can provide insights into the design and implementation of effective token models for projects.</p>
                                         <a href="/whitepapers.html">
                                         <div class="portfolio_btn">
                                             View projects
