--- a/chronicles.html
+++ b/chronicles.html
@@ -129,19 +129,19 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a href="#home" class="smooth_scroll">Home</a>
+                                    <a href="/#home">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#about" class="smooth_scroll">About</a>
+                                    <a href="/#about">About</a>
                                 </li>
                                 <li>
-                                    <a href="#services" class="smooth_scroll">Expertise</a>
+                                    <a href="/#services">Expertise</a>
                                 </li>
                                 <li>
-                                    <a href="#portfolio" class="smooth_scroll">Portfolio</a>
+                                    <a href="/#portfolio">Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="#contact" class="smooth_scroll">Contact</a>
+                                    <a href="/#contact">Contact</a>
                                 </li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -200,8 +200,8 @@
                     <a href="https://github.com/SeunScape">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://github.com/SeunScape">
-                        <img src="/assets/images/pngaaa.com-5939936.png"/>
+                    <a href="https://www.upwork.com/freelancers/~01a6734e39103bcb88">
+                        <img style="width: 22px; vertical-align: middle;" src="/assets/images/pngaaa.com-5939936.png"/>
                     </a>
                 </div>
                 <p>&copy; 2023 BlessingAlabi | All rights reserved.</p>
