site complete, responsive next

--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                 <div class="row">
                     <div class="col-md-5 about-img">
                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                            <img src="assets/images/me.jpg" alt="">
+                            <img src="assets/images/MMMMMP.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-7 padding-left-35">
                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 30px;">Hi there, <span class="about-sub">nice to meet you</span></h3>
-                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I developed an interest in computing at an early age and started coding in my first year of studying computer science in the university. As a student, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. My love for blockchain technology has led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.</p>
-                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, such as Spanish. I also have a passion for writing and love to relax by watching movies.</p>
+                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I am a web developer and writer with a passion for computing from an early age. While studying computer science at the university, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. My interest in blockchain technology led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.
+                        <br/>When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, especially Spanish. I also love watching movies and playing video games.</p>
                         <div class="skills">
                             <ul class="dev-skill">
                                 <li>ReactJS</li>
@@ -304,7 +304,8 @@
                                         </ul>
                                        
                                     </div>
-                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I was the frontend developer on the FrontDesk Management System project. I used React.js to create a user-friendly dashboard for tracking office information, which was received and displayed from the backend through an API. The backend was programmed using PHP, and the system also had a fully functioning authentication system with log-in, recover password and log-out functionality.</p>
+                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I worked as the frontend developer on the FrontDesk Management System project, where I used React.js to design a dashboard that made it easy for users to track office information. The backend was programmed using PHP, and an API was used to retrieve and display the information on the dashboard. In addition, the system featured a fully functional authentication system that allowed users to log in, recover their password, and log out.
+                                    </p>
                                     <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
                                     <a href="/frontdesk.html">
                                     <div class="portfolio_btn">
@@ -314,7 +315,7 @@
                                 </div>
                                 <div class="col-md-5">
                                     <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                                        <img src="assets/images/me.jpg" alt="">
+                                        <img src="assets/images/Screenshot_20230227_093441.png" alt="">
                                     </div>
                                 </div>
                             </div>
