--- a/frontdesk.html
+++ b/frontdesk.html
@@ -123,25 +123,25 @@
                             </button>
 
                             <!-- LOGO -->
-                            <a class="navbar-brand branding" href="#"><img src="assets/images/Frame.png"></img></a>
+                            <a class="navbar-brand branding" href="#"><img src="assets/images/BlessingAlabi.png"></img></a>
 
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a href="#home" class="smooth_scroll">Home</a>
+                                    <a href="/#home" class="smooth_scroll">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#about" class="smooth_scroll">About</a>
+                                    <a href="/#about" class="smooth_scroll">About</a>
                                 </li>
                                 <li>
-                                    <a href="#services" class="smooth_scroll">Expertise</a>
+                                    <a href="/#services" class="smooth_scroll">Expertise</a>
                                 </li>
                                 <li>
-                                    <a href="#portfolio" class="smooth_scroll">Portfolio</a>
+                                    <a href="/#portfolio" class="smooth_scroll">Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="#contact" class="smooth_scroll">Contact</a>
+                                    <a href="/#contact" class="smooth_scroll">Contact</a>
                                 </li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -160,17 +160,73 @@
                             <h1 style="color:black">FrontDesk MS</h1>
                         </div>
             
-                        <p>dolore ut nostrud ea Duis Excepteur ullamco veniam ullamco pariatur labore amet ex qui velit nostrud ut incididunt aliqua. voluptate quis irure et velit reprehenderit in qui consectetur anim ut dolore fugiat ullamco labore labore ea. qui dolor aliqua pariatur do deserunt commodo irure do voluptate reprehenderit fugiat nostrud aliqua nulla proident. eu velit occaecat reprehenderit officia ipsum non esse est ad adipiscing sit fugiat ea proident elit. magna id exercitation laborum eu non aliqua et officia amet laborum dolor minim laboris anim id exercitation. Excepteur velit pariatur proident nulla dolor non aute sunt non commodo ullamco eiusmod qui sit ut irure enim.
-  irure nostrud sed proident deserunt.</p>
+                        <p>I worked as the frontend developer on the FrontDesk Management System project, where I used React.js to design a dashboard that made it easy for users to track office information. The dashboard presented real-time data on office occupancy, meeting room scheduling, and visitor information, allowing users to make informed decisions about office usage.
+                            On the backend, the system was programmed using PHP and MySql, with an API used to retrieve and display the information on the dashboard.
+                           <br/> In addition, the system featured a fully functional authentication system that allowed users to log in, recover their password, and log out. This was implemented using best practices in security to ensure that user data was kept safe and secure.
+                            Overall, my work on the FrontDesk Management System project was focused on creating a user-friendly and efficient system that helped users make the most of their office space and resources.</p>
                     </div>
                 </div>
                 <div class="row padding-top-90">
                     <div class="col-md-12">
-                        <img src="./assets/images/joshua-earle-EqztQX9btrE-unsplash.jpg"/>
+                        <img src="./assets/images/staff.jpg"/>
                     </div>
 
                 </div>
+                <div class="row padding-top-90">
+                    <div class="col-md-4">
+                        <img src="./assets/images/Screenshot_20230215_041831.png"/>
+                    </div>
+                    <div class="col-md-8">
+                        <img src="./assets/images/Screenshot_20230215_041913.png"/>
+                    </div>
+                </div>
             </div>
         </section>
+        <footer class="padding-top-90 padding-bottom-90">
+            <div class="container text-center animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                <div class="social-links">
+                    <!--Social links-->
+                    <a href="https://twitter.com/blerix_" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/blessing-alabi-9090041b1/">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/SeunScape">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://www.upwork.com/freelancers/~01a6734e39103bcb88">
+                        <img style="width: 22px; vertical-align: middle;" src="/assets/images/pngaaa.com-5939936.png"/>
+                    </a>
+                </div>
+                <p>&copy; 2023 BlessingAlabi | All rights reserved.</p>
+            </div><!--.container-->  
+        </footer>
+         <!--jquery.min.js-->
+         <script src="assets/js/jquery.min.js"></script>
+
+         <!--parallax.min.js-->
+         <script src="assets/js/parallax.min.js"></script>
+         
+         <!--animate-skills.js-->
+         <script src="assets/js/animate-skills.js"></script>
+ 
+         <!--jquery.fittext.js-->
+         <script src="assets/js/jquery.fittext.js"></script>
+ 
+         <!--bootstrap.min.js-->
+         <script src="assets/js/bootstrap.min.js"></script>
+ 
+         <!--jquery.magnific-popup.min.js-->
+         <script src="assets/js/jquery.magnific-popup.min.js"></script>
+ 
+         <!--isotope.pkgd.min.js-->
+         <script src="assets/js/isotope.pkgd.min.js"></script>
+ 
+         <!--owl.carousel.min.js-->
+         <script src="assets/js/owl.carousel.min.js"></script>
+ 
+         <!-- Main script js -->
+         <script src="assets/js/custom.js"></script>
     </body>
 </html>
