--- a/frontdesk.html
+++ b/frontdesk.html
@@ -123,25 +123,25 @@
                             </button>
 
                             <!-- LOGO -->
-                            <a class="navbar-brand branding" href="#"><img src="assets/images/BlessingAlabi.png"></img></a>
+                            <a class="navbar-brand branding" href="/#home"><img src="assets/images/BlessingAlabi.png"></img></a>
 
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a href="/#home" class="smooth_scroll">Home</a>
+                                    <a href="/#home">Home</a>
                                 </li>
                                 <li>
-                                    <a href="/#about" class="smooth_scroll">About</a>
+                                    <a href="/#about">About</a>
                                 </li>
                                 <li>
-                                    <a href="/#services" class="smooth_scroll">Expertise</a>
+                                    <a href="/#services">Expertise</a>
                                 </li>
                                 <li>
-                                    <a href="/#portfolio" class="smooth_scroll">Portfolio</a>
+                                    <a href="/#portfolio">Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="/#contact" class="smooth_scroll">Contact</a>
+                                    <a href="/#contact">Contact</a>
                                 </li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -164,7 +164,12 @@
                             On the backend, the system was programmed using PHP and MySql, with an API used to retrieve and display the information on the dashboard.
                            <br/> In addition, the system featured a fully functional authentication system that allowed users to log in, recover their password, and log out. This was implemented using best practices in security to ensure that user data was kept safe and secure.
                             Overall, my work on the FrontDesk Management System project was focused on creating a user-friendly and efficient system that helped users make the most of their office space and resources.</p>
-                    </div>
+                            <div class="portfolio_btn">
+                                <a href="https://github.com/SeunScape/Frontdesk">
+                                    <div class="text-center">Github <i class="fa-brands fa-github"></i></div>
+                                </a>
+                            </div>  
+                        </div>
                 </div>
                 <div class="row padding-top-90">
                     <div class="col-md-12">
