--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
                 <div class="row">
                     <div class="col-md-5 about-img">
                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                            <img src="assets/images/MMMMMP.png" alt="">
+                            <img src="assets/images/Untitled design.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-7 padding-left-35">
                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 30px;">Hi there, <span class="about-sub">nice to meet you</span></h3>
-                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I am a web developer and writer with a passion for computing from an early age. While studying computer science at the university, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. My interest in blockchain technology led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.
+                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I am a web developer and writer with a passion for computing from an early age. While studying computer science at the university, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. In addition to web development, I also write blog posts and whitepapers on a variety of technology topics, including blockchain. My interest in blockchain technology led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.
                         <br/>When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, especially Spanish. I also love watching movies and playing video games.</p>
                         <div class="skills">
                             <ul class="dev-skill">
