--- a/whitepapers.html
+++ b/whitepapers.html
@@ -123,7 +123,7 @@
                             </button>
 
                             <!-- LOGO -->
-                            <a class="navbar-brand branding" href="#"><img src="assets/images/BlessingAlabi.png"></img></a>
+                            <a class="navbar-brand branding" href="/#home"><img src="assets/images/BlessingAlabi.png"></img></a>
 
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
