--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
                         <div>
                             <h1>Blessing Alabi </h1>
                             <h3>
-                                <span>Web developer, Blockchain Developer & Technical Writer</span>
+                                <span class="semi-title">Web developer, Blockchain Developer & Technical Writer</span>
                             </h3>
                             <div class="width-container">
-                                <h3>
+                                <h3 class="header-h3">
                                     i help bring ideas to life on the web and secure them with blockchain technology. I also write clear and engaging explanations to make complex technical concepts accessible for everyone.
                                 </h3>
                             </div>
-                            <div class="about_btns text-center">
+                            <div class="about_btns text-center btn-display">
                                 <a href="/assets/file/seunscape.pdf" target="_blank">Download CV</a>
                                 <a class="smooth_scroll" href="#contact">Contact Me</a>
                             </div>
@@ -135,7 +135,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://www.upwork.com/freelancers/~01a6734e39103bcb88">
+                                    <a href="https://www.upwork.com/freelancers/~01a6734e39103bcb88" class="list-img">
                                         <img style="width: 25px; vertical-align: middle;" src="/assets/images/pngaaa.com-5939936.png"/>
                                     </a>
                                 </li>
@@ -167,6 +167,7 @@
                     </div>
                     <div class="col-md-7 padding-left-35">
                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 30px;">Hi there, <span class="about-sub">nice to meet you</span></h3>
+                        <h3 class="animated animated_scroll fadeInUp about-header-fix" style="animation-delay: 0.3s; font-size: 30px; display: none;">About Me</h3>
                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I am a web developer and writer with a passion for computing from an early age. While studying computer science at the university, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. In addition to web development, I also write blog posts and whitepapers on a variety of technology topics, including blockchain. My interest in blockchain technology led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.
                         <br/>When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, especially Spanish. I also love watching movies and playing video games.</p>
                         <div class="skills">
@@ -322,7 +323,6 @@
 
                             <!-- project 2 -->
                             <div class="row padding-top-90">
-                                <div class="row">
                                     <div class="col-md-7 padding-left-35 contain">
                                         <h6 style="color:#507ec8">Blockchain Development</h6>
                                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Chronicles NFT</span></h3>
@@ -347,12 +347,10 @@
                                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                                             <img src="assets/images/Chronicles2.png" alt="">
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                              <!-- project 3 -->
                              <div class="row padding-top-90">
-                                <div class="row">
                                     <div class="col-md-7 padding-left-35 contain">
                                         <h6 style="color:#d35ca5">Writing</h6>
                                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Whitepapers</span></h3>
@@ -376,7 +374,6 @@
                                             <img src="./assets/images/Screenshot_20230217_115040.png" alt="">
                                         </div>
                                     </div>
-                                </div>
                             </div>
             </div>
             </div><!--.container-->
