--- a/frontdesk.html
+++ b/frontdesk.html
@@ -10,7 +10,7 @@
         <title>Portfolio</title>
 
         <!-- favicon -->
-        <link id="favicon" rel="icon" type="image/png" href="">
+        <link id="favicon" rel="icon" type="image/png" href="assets/images/Group 1.png">
 
         <!-- Google Fonts-->
         <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500%7CMontserrat:300,400,500,600,700,800,900"> -->
@@ -41,16 +41,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
         <script src="./assets/js/anime.js"></script>
-
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
-
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-          <script src="anime.min.js"></script>
-        <![endif]-->
             <style>
+                .navbar-default {
+                    background-color: black !important;
+                }
               .navbar-default .navbar-brand:hover, 
 .navbar-default .navbar-brand:focus {
     color: black;
@@ -64,7 +58,7 @@
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: black;
+    color: white;
 }
 
 .navbar-default .navbar-nav a:after {
@@ -90,7 +84,19 @@
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: black !important;
+    background-color: white !important;
+}
+@media(max-width:767px) {
+    .navbar-brand img{
+    margin: -11px!important;
+    width: 160px !important;
+}
+    .front-class {
+        padding: 10px;
+    }
+    .port-text h1 {
+        font-size: 40px;
+    }
 }
             </style>
     </head>
@@ -148,7 +154,7 @@
                     </div><!--.container-->
                 </nav>
         </section>
-        <section class="padding-top-90 padding-bottom-90">
+        <section class="padding-bottom-90 front-class" style="padding-top: 30px;">
             <div class="container">
               <div class="back"><a onclick="history.back()"><i class="fa-sharp fa-solid fa-arrow-left"></i></a></div>
                 <div class="row">
