--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- TITLE OF SITE -->
-        <title>Portfolio</title>
+        <title>Blessing Alabi- Front-End & Blockchain Developer, Technical Writer</title>
 
         <!-- favicon -->
         <link id="favicon" rel="icon" type="image/png" href="assets/images/Group 1.png">
