--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </h3>
                             <div class="width-container">
                                 <h3 class="header-h3">
-                                    i help bring ideas to life on the web and secure them with blockchain technology. I also write clear and engaging explanations to make complex technical concepts accessible for everyone.
+                                    I help bring ideas to life on the web and secure them with blockchain technology. I also write clear and engaging explanations to make complex technical concepts accessible for everyone.
                                 </h3>
                             </div>
                             <div class="about_btns text-center btn-display">
@@ -290,8 +290,38 @@
                 <div class="sec_title">
                     <h2>portfolio</h2>
                 </div>
-                    <!--project 1-->
-                            <div class="row">
+                     <!--project 1-->
+                     <div class="row">
+                        <div class="col-md-7 padding-left-35 contain">
+                            <h6>Front-End Development</h6>
+                            <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.2s; font-size: 35px;">AlgoAssistant</span></h3>
+                            <div class="skills">
+                                <ul class="dev-skill">
+                                    <li>NextJS</li>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>GPT-3</li>
+                                </ul>
+                               
+                            </div>
+                            <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s"> I built a application that leverages the OpenAI GPT-3 API to find solutions to data structure and algorithm questions in multiple programming languages.
+                            </p>
+                            <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
+                            <a href="/algoassistant.html">
+                            <div class="portfolio_btn">
+                               View project
+                            </div>
+                            </a>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.2s">
+                                <img src="assets/images/Screenshot 2023-03-18 104116 1.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!--project 2-->
+                            <div class="row padding-top-90">
                                 <div class="col-md-7 padding-left-35 contain">
                                     <h6>Front-End Development</h6>
                                     <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.2s; font-size: 35px;">FrontDesk MS</span></h3>
@@ -321,7 +351,7 @@
                                 </div>
                             </div>
 
-                            <!-- project 2 -->
+                            <!-- project 3 -->
                             <div class="row padding-top-90">
                                     <div class="col-md-7 padding-left-35 contain">
                                         <h6 style="color:#507ec8">Blockchain Development</h6>
@@ -349,7 +379,7 @@
                                         </div>
                                 </div>
                             </div>
-                             <!-- project 3 -->
+                             <!-- project 4 -->
                              <div class="row padding-top-90">
                                     <div class="col-md-7 padding-left-35 contain">
                                         <h6 style="color:#d35ca5">Writing</h6>
