--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="skills">
                             <ul class="dev-skill">
                                 <li>ReactJS</li>
-                                <li>Next.js</li>
+                                <li>NextJS</li>
                                 <li>Solidity</li>
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -185,6 +185,7 @@
                                 <li>Web3.js</li>
                                 <li>Wordpress</li>
                                 <li>Graphics</li>
+                                <li>TailwindCSS</li>
                                 <li>GIT</li>
                                 <li>Technical Writing</li>
                                 <li>Blockchain writing</li>
@@ -305,7 +306,7 @@
                                 </ul>
                                
                             </div>
-                            <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s"> I built a application that leverages the OpenAI GPT-3 API to find solutions to data structure and algorithm questions in multiple programming languages.
+                            <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s"> I built a application that leverages the OpenAI GPT-3 API to find solutions to data structure and algorithm problems in multiple programming languages.
                             </p>
                             <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.2s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
                             <a href="/algoassistant.html">
