--- a/algoassistant.html
+++ b/algoassistant.html
@@ -182,7 +182,7 @@ width: 160px !important;
                         </div>
                             
                             <div class="portfolio_btn">
-                            <a href="">
+                            <a href="https://algoassistant.vercel.app/">
                                 <div class="text-center"> View live <i class="fa-solid fa-arrow-right"></i></div>
                             </a>
                         </div>
